# cv

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config  katex-header.html
.github/workflows/: build-all.yml  lints.yml  no-std.yml  tests.yml  unit-test.yml
akaze/: Cargo.toml  README.md  algorithm.md
akaze/benches/: criterion.rs
akaze/ensure_no_std/: Cargo.toml
akaze/ensure_no_std/src/: main.rs
akaze/examples/: akaze.rs
akaze/src/: contrast_factor.rs  derivatives.rs  descriptors.rs  detector_response.rs  evolution.rs  image.rs  lib.rs  nonlinear_diffusion.rs  scale_space_extrema.rs
akaze/tests/: estimate_pose.rs
benches/: criterion.rs
cv/: Cargo.toml  README.md
cv-core/: Cargo.toml  README.md
cv-core/ensure_no_std/: Cargo.toml
cv-core/notes/: derivation_of_triangulate_bearing_reproject.md
cv-core/src/: camera.rs  keypoint.rs  lib.rs  matches.rs  point.rs  pose.rs  so3.rs  triangulation.rs
cv-geom/: Cargo.toml  README.md
cv-geom/ensure_no_std/: Cargo.toml
cv-geom/src/: epipolar.rs  lib.rs  triangulation.rs
cv-optimize/: Cargo.toml  LICENSE  README.md
cv-optimize/src/: lib.rs  many_view_optimizer.rs  single_view_optimizer.rs  three_view_optimizer.rs  two_view_optimizer.rs
cv-pinhole/: Cargo.toml  README.md
cv-pinhole/ensure_no_std/: Cargo.toml
cv-pinhole/src/: camera.rs  essential.rs  lib.rs  radial.rs  root.rs
cv-pinhole/src/distortion_function/: even_poly_2.rs  even_rational_6_6.rs  fisheye.rs  identity.rs  mod.rs  polynomial.rs  rational.rs
cv-pointclouds/: Cargo.toml  README.md  test.ply  test_without_color.ply
cv-pointclouds/src/: lib.rs  ply_parser.rs
cv-reconstruction/: Cargo.toml
cv-reconstruction/src/: export.rs  lib.rs  settings.rs
cv-sfm/: Cargo.toml
cv-sfm/src/: codewords.rs  export.rs  lib.rs  settings.rs
cv-sift/: Cargo.toml  LICENSE  README.md
cv-sift-bin/: Cargo.toml
cv-sift-bin/src/: main.rs
cv-sift/.cargo/: config.toml
cv-sift/src/: config.rs  conversion.rs  errors.rs  ext.rs  extrema.rs  image.rs  imageproc.rs  lib.rs  pyramid.rs  sift.rs  utils.rs
cv-sift/src/pyramid/: base_image.rs  kernels.rs  mod.rs  octaves.rs
cv-sift/tests/: test_base_image.rs  test_gaussian_kernels.rs  test_number_of_octaves.rs  test_subtraction.rs
cv/src/: lib.rs
egui/: Cargo.toml
egui/src/: lib.rs
eight-point/: Cargo.toml  LICENSE  README.md
eight-point/ensure_no_std/: Cargo.toml
eight-point/src/: lib.rs
eight-point/tests/: random.rs
ensure_no_std/: Cargo.toml
ensure_no_std/src/: main.rs
imgshow/: Cargo.toml
imgshow/src/: lib.rs  main.rs
kpdraw/: Cargo.toml  README.md
kpdraw/src/: lib.rs  main.rs
kpshow/: Cargo.toml
kpshow/src/: main.rs
lambda-twist/: Cargo.toml  README.md  katex-header.html
lambda-twist/ensure_no_std/: Cargo.toml
lambda-twist/src/: lib.rs
lambda-twist/tests/: consensus.rs
nister-stewenius/: Cargo.toml
nister-stewenius/src/: lib.rs
nister-stewenius/tests/: manual.rs
res/: source.txt
src/: bicubic.rs  camera.rs  contrast_factor.rs  derivatives.rs  descriptors.rs  detector_response.rs  essential.rs  evolution.rs  export.rs  features.rs  fed_tau.rs  geom.rs  image.rs  keypoint.rs  keypoints.rs  lib.rs  main.rs  many_view_optimizer.rs  matching.rs  nonlinear_diffusion.rs  point.rs  pose.rs  relative_pose.rs  scale_space_extrema.rs  slam.rs  so3.rs  triangulate.rs  triangulation.rs  two_view_optimizer.rs  vslam.rs  world.rs  world_point.rs  world_pose.rs
src/camera/: pinhole.rs
tests/: consensus.rs  estimate_pose.rs  manual.rs  random.rs
tutorial/: book.toml
tutorial-chapters/chapter2-first-program/: Cargo.toml
tutorial-chapters/chapter2-first-program/src/: main.rs
tutorial-chapters/chapter3-akaze-feature-extraction/: Cargo.toml
tutorial-chapters/chapter3-akaze-feature-extraction/src/: main.rs
tutorial-code/chapter2-first-program/: Cargo.toml
tutorial-code/chapter2-first-program/src/: main.rs
tutorial-code/chapter3-akaze-feature-extraction/: Cargo.toml
tutorial-code/chapter3-akaze-feature-extraction/src/: main.rs
tutorial-code/chapter4-feature-matching/: Cargo.toml
tutorial-code/chapter4-feature-matching/src/: main.rs
tutorial-code/chapter5-geometric-verification/: Cargo.toml
tutorial-code/chapter5-geometric-verification/src/: main.rs
tutorial/code/chapter3-akaze-feature-extraction/: Cargo.toml
tutorial/code/chapter3-akaze-feature-extraction/src/: main.rs
tutorial/src/: SUMMARY.md  ch1-introduction.md  ch2-first-program.md  ch3-akaze-feature-extraction.md  ch3-akaze-features-extraction.md  ch4-feature-matching.md  chapter1-introduction.md  chapter2-first-program.md  chapter3-akaze-feature-extraction.md  chapter4-feature-matching.md
vslam-sandbox/: Cargo.toml  LICENSE
vslam-sandbox/shaders/point_cloud_viewer/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
vslam-sandbox/src/: edit_box_guards.rs  files_panel.rs  main.rs  options_panel.rs  run_parameters.rs  view3d_panel.rs  vslam.rs  vslam_algo.rs  wgpu_rendering.rs  window_content.rs
