[workspace]

members = [
    "cv",
    "cv-core",
    "cv-geom",
    "cv-pinhole",
    "cv-optimize",
    "akaze",
    "eight-point",
    "lambda-twist",
    "nister-stewenius",
    "cv-reconstruction",
    "vslam-sandbox",
    "kpdraw",
    "imgshow",
    "tutorial-chapters/chapter2-first-program",
    "tutorial-chapters/chapter3-akaze-feature-extraction",
]

[profile.dev]
# The tests take a very long time without optimization.
opt-level = 3

[profile.bench]
# Necessary to generate flamegraphs
debug = true
codegen-units = 1

[profile.release]
lto = "fat"
codegen-units = 1
debug = true
