[workspace]

members = [
    "cv",
    "cv-core",
    "cv-geom",
    "cv-pinhole",
    "cv-optimize",
    "cv-sfm",
    "akaze",
    "eight-point",
    "lambda-twist",
    "nister-stewenius",
    "vslam-sandbox",
    "kpdraw",
    "imgshow",
    "tutorial-code/chapter2-first-program",
    "tutorial-code/chapter3-akaze-feature-extraction",
]

[profile.dev]
# The tests take a very long time without optimization.
opt-level = 3

[profile.bench]
# Necessary to generate flamegraphs
debug = true
codegen-units = 1
lto = "fat"

[profile.release]
debug = true
