[workspace]

members = [
    "cv",
    "cv-core",
    "cv-geom",
    "cv-pinhole",
    "cv-optimize",
    "cv-sfm",
    "akaze",
    "eight-point",
    "lambda-twist",
    "nister-stewenius",
    "vslam-sandbox",
    "kpdraw",
    "tutorial-code/chapter2-first-program",
    "tutorial-code/chapter3-akaze-feature-extraction",
    "tutorial-code/chapter4-feature-matching",
    "tutorial-code/chapter5-geometric-verification",
]

[profile.dev]
# The tests take a very long time without optimization.
opt-level = 1
# This is needed to reduce memory usage during compilation, or CI will fail
codegen-units = 1

[profile.bench]
# Necessary to generate flamegraphs
debug = true
codegen-units = 1
lto = "fat"

[profile.release]
# Necessary to generate flamegraphs
debug = true
codegen-units = 1
lto = "fat"
