[package]
name = "akaze"
version = "0.7.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "AKAZE feature extraction algorithm for computer vision"
keywords = ["keypoint", "descriptor", "vision", "sfm", "slam"]
categories = ["computer-vision", "science::robotics"]
repository = "https://github.com/rust-cv/cv"
documentation = "https://docs.rs/akaze/"
license = "MIT"
readme = "README.md"

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
image = { version = "0.23.14", default-features = false }
log = { version = "0.4.14", default-features = false }
primal = { version = "0.3.0", default-features = false }
derive_more = { version = "0.99.11", default-features = false }
nshare = { version = "0.2.0", features = ["ndarray", "image"] }
ndarray = { version = "0.14.0", default-features = false }
float-ord = { version = "0.2.0", default-features = false }
space = "0.10.3"
bitarray = "0.2.6"


[dev-dependencies]
eight-point = { version = "0.8.0", path = "../eight-point" }
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
arrsac = "0.6.1"
space = "0.10.3"
rand = "0.8.3"
rand_pcg = "0.3.0"
criterion = "0.3.4"
pretty_env_logger = "0.4.0"
image = "0.23.14"
bitarray = { version = "0.2.6", features = ["space"] }

[[bench]]
name = "criterion"
harness = false
