[package]
name = "cv-core"
version = "0.15.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "Contains core primitives used in computer vision applications"
documentation = "https://docs.rs/cv-core/"
repository = "https://github.com/rust-cv/cv"
keywords = ["computer", "vision", "core", "cv", "photogrammetry"]
categories = ["algorithms", "computer-vision", "no-std", "science", "science::robotics"]
license = "MIT"
readme = "README.md"

[features]
serde-serialize = ["serde", "nalgebra/serde-serialize"]

[dependencies]
nalgebra = { version = "0.25.3", default-features = false, features = ["libm"] }
derive_more = "0.99.11"
sample-consensus = "1.0.1"
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.124", default-features = false, features = ["derive"], optional = true }

[package.metadata.docs.rs]
all-features = true
