[package]
name = "cv-geom"
version = "0.7.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"
description = "Contains computational geometry algorithms used in computer vision"
documentation = "https://docs.rs/cv-geom/"
repository = "https://github.com/rust-cv/cv"
keywords = ["computer", "vision", "computational", "geometry", "triangulation"]
categories = ["computer-vision", "no-std", "science::robotics"]
license = "MIT"
readme = "README.md"

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
float-ord = "0.3.2"
