[package]
name = "cv-optimize"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[dependencies]
levenberg-marquardt = "0.8.0"
cv-core = { version = "0.15.0", path = "../cv-core" }
nalgebra = { version = "0.25.3", features = ["alloc"], default-features = false }
num-traits = "0.2.14"
argmin = { version = "0.4.1", features = ["ndarrayl"] }
ndarray = "0.14.0"
average = "0.10.6"
itertools = "0.10.0"
