[package]
name = "cv-optimize"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[dependencies]
levenberg-marquardt = "0.10.0"
cv-core = { version = "0.15.0", path = "../cv-core" }
nalgebra = { version = "0.28.0", features = ["alloc"], default-features = false }
num-traits = "0.2.14"
argmin = "0.4.6"
average = "0.13.1"
itertools = "0.10.1"
