[package]
name = "cv-pinhole"
version = "0.6.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "Pinhole camera model for comptuer vision"
documentation = "https://docs.rs/cv-pinhole/"
repository = "https://github.com/rust-cv/cv"
keywords = ["computer", "vision", "pinhole", "camera", "calibration"]
categories = ["algorithms", "computer-vision", "no-std", "science::robotics"]
license = "MIT"
readme = "README.md"

[features]
default = []
alloc = []
serde-serialize = ["serde", "nalgebra/serde-serialize"]

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-geom = { version = "0.7.0", path = "../cv-geom" }
derive_more = "0.99.16"
num-traits = { version = "0.2.14", default-features = false }
float-ord = "0.3.1"
serde = { version = "1.0.126", features = ["derive"], default-features = false, optional = true }
nalgebra = { version = "0.28.0", default-features = false }

[dev-dependencies]
cv-geom = { version = "0.7.0", path = "../cv-geom" }

[package.metadata.docs.rs]
all-features = true
