[package]
name = "cv-reconstruction"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[features]
serde-serialize = ["serde", "cv-core/serde-serialize", "bitarray/serde", "cv-pinhole/serde-serialize"]

[dependencies]
argmin = "0.4.5"
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
cv-geom = { version = "0.7.0", path = "../cv-geom" }
eight-point = { version = "0.8.0", path = "../eight-point" }
lambda-twist = { version = "0.7.0", path = "../lambda-twist" }
cv-optimize = { version = "0.1.0", path = "../cv-optimize" }
akaze = { version = "0.7.0", path = "../akaze" }
space = "0.13.1"
rand = "0.8.4"
rand_pcg = { version = "0.3.1", features = ["serde1"] }
maplit = "1.0.2"
log = "0.4.14"
itertools = "0.10.1"
image = "0.23.14"
ply-rs = "0.1.3"
imageproc = "0.22.0"
conv = "0.3.3"
bitarray = { version = "0.4.0", features = ["space"] }
rstar = "0.9.0"
serde = { version = "1.0.126", features = ["derive"], optional = true }
slotmap = { version = "1.0.5", features = ["serde"] }
hgg = { version = "0.2.0", default-features = false }
