[package]
name = "cv-sfm"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[features]
serde-serialize = ["serde", "cv-core/serde-serialize", "bitarray/serde", "cv-pinhole/serde-serialize", "bitarray/serde", "slotmap/serde", "hgg/serde", "hamming-lsh/serde"]

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
cv-geom = { version = "0.7.0", path = "../cv-geom" }
eight-point = { version = "0.8.0", path = "../eight-point" }
lambda-twist = { version = "0.7.0", path = "../lambda-twist" }
cv-optimize = { version = "0.1.0", path = "../cv-optimize" }
akaze = { version = "0.7.0", path = "../akaze" }
argmin = { version = "0.4.6", default-features = false, features = ["nalgebral"] }
space = { version = "0.17.0", default-features = false }
maplit = { version = "1.0.2", default-features = false }
log = { version = "0.4.14", default-features = false }
itertools = { version = "0.10.1", default-features = false }
image = { version = "0.23.14", default-features = false }
ply-rs = { version = "0.1.3", default-features = false }
imageproc = "0.22.0"
conv = { version = "0.3.3", default-features = false }
bitarray = { version = "0.9.3", default-features = false, features = ["space"] }
serde = { version = "1.0.126", features = ["derive"], optional = true }
slotmap = "1.0.5"
hgg = { version = "0.4.1", default-features = false }
rand = { version = "0.8.4", default-features = false }
hamming-lsh = "0.3.2"
float-ord = { version = "0.3.1", default-features = false }
average = "0.13.1"
