[package]
name = "cv"
version = "0.6.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "Batteries-included pure-Rust computer vision crate"
keywords = ["computer", "vision", "photogrammetry", "camera"]
categories = ["computer-vision"]
repository = "https://github.com/rust-cv/cv"
documentation = "https://docs.rs/cv/"
license = "MIT"
readme = "README.md"

[features]
default = [
    "alloc",
    "cv-pinhole",
    "cv-geom",
    "eight-point",
    "lambda-twist",
    "akaze",
    "space",
    "hnsw",
    "levenberg-marquardt",
    "arrsac",
    "bitarray",
]
alloc = [
    "cv-pinhole/alloc"
]

[dependencies]
cv-core = "0.15.0"
cv-pinhole = { optional = true, version = "0.6.0" }
cv-geom = { optional = true, version = "0.7.0" }
eight-point = { optional = true, version = "0.8.0" }
lambda-twist = { optional = true, version = "0.7.0" }
akaze = { optional = true, version = "0.7.0" }
space = { version = "0.10.3", optional = true }
hnsw = { version = "0.6.1", optional = true }
levenberg-marquardt = { version = "0.5.2", optional = true }
arrsac = { version = "0.5.0", optional = true }
bitarray = { version = "0.2.3", features = ["space"], optional = true }

[package.metadata.docs.rs]
all-features = true
