[package]
name = "cv"
version = "0.6.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "Batteries-included pure-Rust computer vision crate"
keywords = ["computer", "vision", "photogrammetry", "camera"]
categories = ["computer-vision"]
repository = "https://github.com/rust-cv/cv"
documentation = "https://docs.rs/cv/"
license = "MIT"
readme = "README.md"

[features]
default = [
    "alloc",
    "cv-pinhole",
    "cv-geom",
    "eight-point",
    "lambda-twist",
    "akaze",
    "imgshow",
    "space",
    "hnsw",
    "levenberg-marquardt",
    "arrsac",
    "bitarray",
    "image",
    "jpeg",
    "png",
]
alloc = [
    "cv-pinhole/alloc"
]
jpeg = [
    "image",
    "image/jpeg"
]
png = [
    "image",
    "image/png"
]

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-pinhole = { optional = true, version = "0.6.0", path = "../cv-pinhole" }
cv-geom = { optional = true, version = "0.7.0", path = "../cv-geom" }
eight-point = { optional = true, version = "0.8.0", path = "../eight-point" }
lambda-twist = { optional = true, version = "0.7.0", path = "../lambda-twist" }
akaze = { optional = true, version = "0.7.0", path = "../akaze" }
imgshow = { optional = true, version = "0.1.0", path = "../imgshow" }
space = { version = "0.10.3", optional = true }
hnsw = { version = "0.6.1", optional = true }
levenberg-marquardt = { version = "0.5.2", optional = true }
arrsac = { version = "0.5.0", optional = true }
bitarray = { version = "0.2.3", features = ["space"], optional = true }
image = { version = "0.23.7", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
