[package]
name = "cv"
version = "0.6.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"
description = "Batteries-included pure-Rust computer vision crate"
keywords = ["computer", "vision", "photogrammetry", "camera"]
categories = ["computer-vision"]
repository = "https://github.com/rust-cv/cv"
documentation = "https://docs.rs/cv/"
license = "MIT"
readme = "README.md"

[features]
default = [
    "alloc",
    "cv-pinhole",
    "cv-geom",
    #"cv-sfm",
    "eight-point",
    "nister-stewenius",
    "lambda-twist",
    "akaze",
    "space",
    "hnsw",
    "levenberg-marquardt",
    "arrsac",
    "bitarray",
    "image",
    "imageproc",
    "jpeg",
    "png",
    # eye is not added by default because it requires libclang-dev to be installed to build.
    # If we can figure out how to get it to build without system dependencies, it can be made default.
    # "eye",
    "ndarray-vision",
]
alloc = ["cv-pinhole/alloc", "space/alloc"]
serde-serialize = [
    "cv-core/serde-serialize",
    "cv-pinhole/serde-serialize",
    "cv-sfm/serde-serialize",
]
jpeg = ["image", "image/jpeg"]
png = ["image", "image/png"]

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-pinhole = { optional = true, version = "0.6.0", path = "../cv-pinhole" }
cv-geom = { optional = true, version = "0.7.0", path = "../cv-geom" }
cv-sfm = { optional = true, version = "0.1.0", path = "../cv-sfm" }
eight-point = { optional = true, version = "0.8.0", path = "../eight-point" }
nister-stewenius = { optional = true, version = "0.1.0", path = "../nister-stewenius" }
lambda-twist = { optional = true, version = "0.7.0", path = "../lambda-twist" }
akaze = { optional = true, version = "0.7.0", path = "../akaze" }
space = { version = "0.17.0", optional = true }
hnsw = { version = "0.11.0", optional = true }
hgg = { version = "0.4.1", optional = true }
levenberg-marquardt = { version = "0.12.0", optional = true }
arrsac = { version = "0.10.0", optional = true }
bitarray = { version = "0.9.0", features = ["space"], optional = true }
image = { version = "0.24", default-features = false, optional = true }
imageproc = { version = "0.23", default-features = false, optional = true }
eye = { version = "0.4.1", optional = true }
ndarray-vision = { version = "0.3.0", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
