[package]
name = "lambda-twist"
version = "0.7.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>", "Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "p3p pose estimation given world points and feature bearings"
documentation = "https://docs.rs/lambda-twist/"
repository = "https://github.com/rust-cv/cv"
readme = "README.md"
keywords = ["p3p", "pose", "vision", "nordberg"]
categories = ["computer-vision", "algorithms", "science::robotics", "no-std"]
license = "MPL-2.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
num-traits = { version = "0.2.14", default-features = false }
arrayvec = { version = "0.5.2", default-features = false }

[dev-dependencies]
approx = "0.4.0"
arrsac = "0.6.1"
rand = { version = "0.8.3", features = ["small_rng"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
itertools = "0.10.0"
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
