[package]
name = "nister-stewenius"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
float-ord = "0.2.0"

[dev-dependencies]
itertools = "0.10.0"
nalgebra = "0.25.3"
