[package]
name = "vslam-sandbox"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[features]
unstable-512-bit-simd = ["bitarray/unstable-512-bit-simd"]

[dependencies]
cv = { version = "0.6.0", path = "../cv" }
cv-reconstruction = { version = "0.1.0", path = "../cv-reconstruction", features = ["serde-serialize"] }
structopt = "0.3.22"
serde = { version = "1.0.126", features = ["derive"] }
image = "0.23.14"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
bincode = "1.3.3"
serde_json = "1.0.64"
bitarray = { version = "0.9.3", default-features = false }
