[package]
name = "vslam-sandbox"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"

[features]
unstable-512-bit-simd = ["bitarray/unstable-512-bit-simd"]

[dependencies]
cv-core = { version = "0.15.0", path = "../cv-core" }
cv-sfm = { version = "0.1.0", path = "../cv-sfm", features = [
    "serde-serialize",
] }
cv-geom = { version = "0.7.0", path = "../cv-geom" }
cv-pinhole = { version = "0.6.0", path = "../cv-pinhole" }
lambda-twist = { version = "0.7.0", path = "../lambda-twist" }
eight-point = { version = "0.8.0", path = "../eight-point" }
arrsac = "0.10.0"
structopt = "0.3.26"
serde = { version = "1.0.136", features = ["derive"] }
image = "0.24"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
bincode = "1.3.3"
serde_json = "1.0.78"
bitarray = { version = "0.9.0", default-features = false }
slotmap = { version = "1.0.6", default-features = false }
